lucicfg/testdata/core/errors/project_without_name.star
luci.project()

# Expect errors like:
#
# Traceback (most recent call last):
#  ...
# Error: missing required field "name"
